--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.1",
     "ethers": "^6.13.5",
     "framer-motion": "^12.0.5",
+    "graphql": "^16.10.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "pino-pretty": "^13.0.0",
