--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ethers": "^6.13.5",
     "framer-motion": "^12.0.5",
     "graphql": "^16.10.0",
+    "lightweight-charts": "3.8.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.6",
     "pino-pretty": "^13.0.0",
